_build/html/reports/python_l10.log
Traceback (most recent call last):
  File "/home/runner/work/qmlcourse/qmlcourse/.venv/lib/python3.7/site-packages/jupyter_cache/executors/utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "/home/runner/work/qmlcourse/qmlcourse/.venv/lib/python3.7/site-packages/nbclient/client.py", line 1117, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/runner/work/qmlcourse/qmlcourse/.venv/lib/python3.7/site-packages/nbclient/util.py", line 78, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/runner/work/qmlcourse/qmlcourse/.venv/lib/python3.7/site-packages/nbclient/util.py", line 57, in just_run
    return loop.run_until_complete(coro)
  File "/opt/hostedtoolcache/Python/3.7.12/x64/lib/python3.7/asyncio/base_events.py", line 587, in run_until_complete
    return future.result()
  File "/home/runner/work/qmlcourse/qmlcourse/.venv/lib/python3.7/site-packages/nbclient/client.py", line 559, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/home/runner/work/qmlcourse/qmlcourse/.venv/lib/python3.7/site-packages/nbclient/client.py", line 862, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/home/runner/work/qmlcourse/qmlcourse/.venv/lib/python3.7/site-packages/nbclient/client.py", line 765, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
import numpy as np

np_example_array = np.array([1,2,3])
print(f"{np_example_array.shape = }")

abs_res = np.abs(-2)
print(f"{abs_res = }")
------------------

[0;36m  File [0;32m"<fstring>"[0;36m, line [0;32m1[0m
[0;31m    (np_example_array.shape = )[0m
[0m                            ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<fstring>, line 1)

